@@ -7,7 +7,7 @@ LATEST VERSION
 
 SIMPLE USAGE
 
-  Get the main page from netscape's web-server:
+  Get the main page from Netscape's web-server:
 
         curl http://www.netscape.com/
 
@@ -38,6 +38,15 @@ SIMPLE USAGE
   or use the more appropriate FTPS way to get the same file:
 
         curl --ftp-ssl ftp://files.are.secure.com/secrets.txt
+
+  Get a file from an SSH server using SFTP:
+
+        curl -u username sftp://shell.example.com/~/personal.txt
+
+  Get a file from an SSH server using SCP using a private key to authenticate:
+
+        curl -u username: --key ~/.ssh/id_dsa --pubkey ~/.ssh/id_dsa.pub \
+        	scp://shell.example.com/~/personal.txt
 
 
 DOWNLOAD TO A FILE
